src/test/ui/generator/static-not-unpin.stderr
error[E0277]: `[static generator@$DIR/static-not-unpin.rs:11:25: 13:6]` cannot be unpinned
  --> $DIR/static-not-unpin.rs:14:18
   |
LL |     assert_unpin(generator);
   |     ------------ ^^^^^^^^^ the trait `Unpin` is not implemented for `[static generator@$DIR/static-not-unpin.rs:11:25: 13:6]`
   |     |
   |     required by a bound introduced by this call
   |
   = note: consider using `Box::pin`
note: required by a bound in `assert_unpin`
  --> $DIR/static-not-unpin.rs:7:20
   |
LL | fn assert_unpin<T: Unpin>(_: T) {
   |                    ^^^^^ required by this bound in `assert_unpin`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
